--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ let scene, camera, renderer;
 function initThreeJS() {
   scene = new THREE.Scene();
   camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+camera.position.z = 30;
   renderer = new THREE.WebGLRenderer({ alpha: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.getElementById('threejs-background').appendChild(renderer.domElement);
